cmake_minimum_required(VERSION 3.9)
project(WIP___DO_NOT_PUSH)

set(CMAKE_CXX_STANDARD 11)

add_executable(WIP___DO_NOT_PUSH Info/Info.cpp Exercise/Exercise.cpp Exercise/Exercise.h Exercise/ExerciseAction.cpp Exercise/ExerciseAction.h Workout/Workout.cpp Workout/Workout.h Workout/WorkoutHistory.cpp Workout/WorkoutHistory.h User.h User.cpp Info/Info.h BackupOutput/BackupOutput.cpp BackupOutput/BackupOutput.h healthInfo.h healthInfo.cpp)